--- a/clusters/danto/platform/traefik/values.yaml
+++ b/clusters/danto/platform/traefik/values.yaml
@@ -14,9 +14,7 @@ ports:
   traefik:
     expose:
       default: false
-  web:
-    expose:
-      default: false
+  web: null
   websecure:
     asDefault: true
     expose:
