--- a/clusters/danto/apps/meshcentral/deployment.yaml
+++ b/clusters/danto/apps/meshcentral/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: meshcentral
-          image: meshcentral/meshcentral:latest
+          image: ghcr.io/ylianst/meshcentral:1.1.55
           ports:
             - name: http
               containerPort: 4430
