--- a/clusters/danto/platform/authentik/values.yaml
+++ b/clusters/danto/platform/authentik/values.yaml
@@ -10,6 +10,16 @@ global:
         secretKeyRef:
           name: authentik-secrets
           key: postgresql_password
+    - name: AUTHENTIK_BOOTSTRAP_PASSWORD
+      valueFrom:
+        secretKeyRef:
+          name: authentik-bootstrap
+          key: bootstrap_password
+    - name: AUTHENTIK_BOOTSTRAP_TOKEN
+      valueFrom:
+        secretKeyRef:
+          name: authentik-bootstrap
+          key: bootstrap_token
 
 authentik:
   log_level: info
