Fix authentik forward-auth endpoint and add checks

--- a/clusters/danto/platform/authentik/middleware.yaml
+++ b/clusters/danto/platform/authentik/middleware.yaml
@@ -4,7 +4,7 @@ metadata:
   name: authentik-forward-auth
 spec:
   forwardAuth:
-    address: http://authentik-server.authentik.svc.cluster.local:9000/outpost.goauthentik.io/auth/traefik
+    address: http://authentik-server.authentik.svc.cluster.local/outpost.goauthentik.io/auth/traefik
     trustForwardHeader: true
     authResponseHeaders:
       - X-authentik-username
